--- a/components/ui/ProjectItem/ProjectItem.module.scss
+++ b/components/ui/ProjectItem/ProjectItem.module.scss
@@ -5,6 +5,7 @@
     max-width: 50%;
     border-radius: 10px;
     overflow: hidden;
+    cursor: pointer;
 
     &:first-child {
         margin-right: 18px;
