--- a/components/pages/Main/Subscribe/Subscribe.module.scss
+++ b/components/pages/Main/Subscribe/Subscribe.module.scss
@@ -32,24 +32,42 @@
     border-radius: 16px;
     overflow: hidden;
     margin: 0 auto;
+
+    .Label {
+        position: absolute;
+        top: 50%;
+        left: 24px;
+        transform: translateY(-50%);
+        display: block;
+        font-size: 16px;
+        line-height: 28px;
+        color: #a0a3bd;
+        pointer-events: none;
+        transition: 0.5s;
+    }
 }
 
 .Input {
     border: none;
-
     height: 100%;
     width: 100%;
     font-weight: 500;
     font-size: 16px;
     line-height: 28px;
-    color: #a0a3bd;
+    color: #14142B;
     padding-left: 24px;
 
-    &::placeholder {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 28px;
-        color: #a0a3bd;
+    &:focus + label,
+    &:not(:placeholder-shown) + label {
+        top: 18px;
+        font-size: 12px;
+        padding: 0;
+    }
+
+    &:focus,&:not(:placeholder-shown){
+        padding-top: 29px;
+        line-height: 16px;
+        padding-bottom: 19px;
     }
 }
 
@@ -229,6 +247,10 @@
         background-color: transparent;
         border: none;
         overflow: visible;
+
+        .Label {
+            transform: translateY(-145%);
+        }
     }
 
     .Input {
@@ -240,6 +262,11 @@
         line-height: 16px;
         margin-bottom: 8px;
         padding-left: 20px;
+
+        &:focus + label,
+        &:not(:placeholder-shown) + label {
+            top: 40px;
+        }
     }
 
     .BtnSubmit {
