--- a/components/pages/Project/Showcase/Accordion/Accordion.module.scss
+++ b/components/pages/Project/Showcase/Accordion/Accordion.module.scss
@@ -33,7 +33,10 @@
         align-items: center;
         cursor: pointer;
         position: relative;
-        
+    }
+
+    .SubContainer{
+        padding-bottom: 10px;
     }
     
     .SubContainerText{
@@ -49,7 +52,17 @@
         align-items: center;
         justify-content: space-between;
         cursor: pointer;
+
+        &[aria-expanded="true"]{
+            .Arrow{
+                &::before{
+                    transform: rotate(0deg);
+                }
+            }
+        }
     }
+
+
 
     .Arrow{
         position: relative;
@@ -75,6 +88,7 @@
                 height: 2px;
                 background: white;
                 transform: rotate(-90deg);
+                transition: all 0.2s ease;
             }
         }
         &::after{
@@ -88,6 +102,7 @@
             width: 14px;
             height: 2px;
             background: #F9365E;
+            transition: all 0.2s ease;
         }
         &::before{
             position: absolute;
@@ -100,6 +115,7 @@
             width: 14px;
             height: 2px;
             background: #F9365E;
+            transition: all 0.2s ease;
             transform: rotate(-90deg);
         }
     }
