--- a/components/ui/PhoneMaskField/PhoneMaskField.module.scss
+++ b/components/ui/PhoneMaskField/PhoneMaskField.module.scss
@@ -21,7 +21,7 @@
     font-size: 16px;
     line-height: 28px;
     font-weight: 500;
-    color: #a0a3bd;
+    color: #14142B;
     background: #fff;
     border: 1px solid #d9dbe9;
     border-radius: 16px;
@@ -30,9 +30,15 @@
 
     &:focus + label,
     &:not(:placeholder-shown) + label {
-        top: -10px;
+        top: 18px;
         font-size: 12px;
         padding: 0;
+    }
+
+    &:focus,&:not(:placeholder-shown){
+        padding-top: 29px;
+        line-height: 16px;
+        padding-bottom: 19px;
     }
 }
 
