--- a/components/ui/TextArea/TextArea.module.scss
+++ b/components/ui/TextArea/TextArea.module.scss
@@ -10,12 +10,12 @@
 .TextArea {
     border: none;
 
-    height: 300px;
+    height: 232px;
     width: 100%;
     font-weight: 500;
     font-size: 16px;
     line-height: 28px;
-    color: #a0a3bd;
+    color: #14142B;
     background: #fff;
     border: 1px solid #d9dbe9;
     border-radius: 16px;
@@ -24,9 +24,16 @@
 
     &:focus + label,
     &:not(:placeholder-shown) + label {
-        top: -24px;
+        top: 12px;
         font-size: 12px;
         padding: 0;
+        line-height: 100%;
+    }
+
+    &:focus,&:not(:placeholder-shown){
+        padding-top: 29px;
+        line-height: 16px;
+        padding-bottom: 19px;
     }
 }
 
