--- a/components/ui/TextField/TextField.module.scss
+++ b/components/ui/TextField/TextField.module.scss
@@ -13,24 +13,29 @@
 
 .Input {
     border: none;
-
     width: 100%;
     height: 64px;
     font-size: 16px;
     line-height: 28px;
     font-weight: 500;
-    color: #a0a3bd;
     background: #fff;
     border: 1px solid #d9dbe9;
     border-radius: 16px;
     padding: 0 0 0 24px;
     transition: all 0.2s ease;
+    color: #14142B;
 
     &:focus + label,
     &:not(:placeholder-shown) + label {
-        top: -10px;
+        top: 18px;
         font-size: 12px;
         padding: 0;
+    }
+
+    &:focus,&:not(:placeholder-shown){
+        padding-top: 29px;
+        line-height: 16px;
+        padding-bottom: 19px;
     }
 }
 
